# quadruped_ROS2

./: README.md
LIO-SAM/config/: params.yaml
LIO-SAM/launch/: run.launch.py
humble/lio_sam/config/: params.yaml
humble/livox_ros_driver2/: frames_2025-08-05_06.04.59.gv  frames_2025-08-05_06.29.04.gv
humble/livox_ros_driver2/launch_ROS2/: msg_MID360_launch.py
humble/livox_ros_driver2/src/: lddc.cpp  lddc.h
humble/robot_control/: package.xml
humble/robot_description/: CMakeLists.txt  package.xml
humble/robot_description/meshes/Lite3/: hip.dae  thigh.dae
humble/robot_description/meshes/M20/: fl_wheel.dae  fr_hipy.dae  hl_wheel.dae
humble/robot_description/urdf/: Lite3.urdf  M20_high_res.urdf
humble/robot_interfaces/: CMakeLists.txt  package.xml
humble/robot_interfaces/action/: Docking.action
humble/robot_manager/: package.xml  setup.py
humble/robot_manager/robot_manager/: robot_manager_node_example.py
humble/robot_navigation/: CMakeLists.txt
humble/transfer/src/: SensorChecker.cpp  SensorsLogger.hpp
humble/transfer_interfaces/msg/: MotionSimpleCMD.msg
lio_sam/config/: Lite3.urdf  params.yaml
lio_sam/launch/: run.launch.py
lio_sam/src/: imageProjection.cpp
livox_ros_driver2/: check_time_field.py
livox_ros_driver2/config/: MID360_config.json
livox_ros_driver2/launch_ROS2/: msg_MID360_launch.py
livox_ros_driver2/src/: lddc copy.cpp  lddc.cpp  lddc.h  lddc_backup.cpp
manager_intergaces/: CMakeLists.txt  package.xml
manager_intergaces/action/: ExecuteTask.action
robot_control/: setup.py
robot_description/launch/: robot_state_publisher.launch.py
robot_description/meshes/Lite3/: shank.dae  torso.dae
robot_description/meshes/M20/: base_link.dae  fl_hipx.dae  fl_hipy.dae  fl_knee.dae  fr_hipx.dae  fr_knee.dae  fr_wheel.dae  hl_hipx.dae  hl_hipy.dae  hl_knee.dae  hr_hipx.dae  hr_hipy.dae  hr_knee.dae  hr_wheel.dae
robot_description/meshes/X30/: hip.dae  shank.dae  torso.dae
robot_description/urdf/: Lite3.urdf  M20_high_res.urdf  X30.urdf
robot_interfaces/action/: GoHome.action  MovePoint.action  Patrol.action
robot_interfaces/srv/: EmergencyStop.srv  StopMotion.srv
robot_navigation/: package.xml
robot_navigation/launch/: navigation.launch.py
transfer/: CMakeLists.txt  package.xml
transfer/include/: protocol.hpp
transfer/launch/: transfer.launch.py
transfer/src/: Jetson2App.cpp  Jetson2Motion.cpp
transfer_interfaces/: CMakeLists.txt  package.xml
transfer_interfaces/msg/: MotionComplexCMD.msg
(+1 files in other folders)
